<resources>
    <string name="app_name">Fez roads guide tourist</string>
    <string name="text1">The foundation of the city is attributed to King Idriss I, a descendant of the prophet, who around 791 decided to set up his capital on the right bank of the Fez river, which gives its name to the city, in the current district Andalusian.</string>
    <string name="text2">Middle Ages Shortly after its first foundation, around 809, his son, Idriss II, made it the capital of the dynasty and settled on the other side of the river, in the upper town.</string>
    <string name="text3">A revolt in Cordoba, in 818, caused the emigration of a large number of Andalusians to Fez, and in 824, another rebellion in Tunisia, more precisely in Kairouan, caused Fez to welcome many Arabs, the predominant race in the city since then.</string>
    <string name="text4">If Fez gradually lost its protagonism in favor of Marrakech, the Almoravid and Almohad dynasties did not neglect it. During this time, the two areas of the city were united under a single and unique wall.</string>
    <string name="btnexpedall">Expand_all</string>
    <string name="categories">Categories</string>
    <string name="scroll_view_description"><![CDATA[<string name=\"scroll_view_description\">Scroll vertically to view more content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scroll_view_description1">\@string/scroll_view_description1</string>
    <string name="text"/>
    <string name="textabout">set in a traditional riad with intricate Moorish and baroque-style carved interior courtyards, this luxury hotel is a 5-minute walk from Batha Museum and 2 km from Palais Royal de Fes.\nOrnate, Moroccan-style rooms have free Wi-Fi, TVs and minibars, plus tea and coffeemakers. Lavish suites add sitting areas and courtyard views; some feature terraces and/or handcrafted furniture. Room service is offered.\nFreebies include breakfast and welcome drinks. There\'s also a fine-dining restaurant, a wine bar and a rooftop terrace. Amenities include an upscale spa, a gym, and an outdoor pool with a cocktail bar. Cooking classes and tours are available</string>
    <string name="textbleue">\nAbout this hotel\nSet in the Medina district, this upscale guesthouse in a 1915 former residence with Fassi architecture is a minute\'s walk from Dar Batha Museum and 3 minutes on foot from the ornate Bab Bou Jeloud city gate.\nElegant rooms feature mosaic tile floors and antique furnishings, and provide Internet access, flat-screen TVs, minibars and safes. Upgraded rooms add sitting areas; some offer 4-poster beds. Bathrooms are en suite.\n\nComplimentary amenities include breakfast, and guided tours of the Medina. A refined restaurant offers a regal courtyard and a rooftop terrace. There\'s also a gym and a stately library. Cooking classes are available.\n\nCheck-in time: 14:00\nCheck-out time: 12:00</string>
    <string name="textlarousa">In a 17th-century palace, this elegant hotel is a 6-minute walk from the Zaouia Moulay Idriss II shrine.\nFeaturing painted wood ceilings and handmade furnishings, the 8 upscale rooms and suites face an inner courtyard. All quarters come with Wi-Fi and safes, while some include sitting areas and lofts. Many offer brick fireplaces and traditional Moroccan plastered bathrooms. Room service is available.\n\nLunches and dinners are available on request in the bar/restaurant. There\'s a heated outdoor pool, a terrace overlooking the medina, and a spa with a hammam, as well as shared living rooms with fireplaces. Full Moroccan breakfast is available.</string>
    <string name="farajtext">This refined hotel is a kilometer from the Bou Inania Madrasa and 2.9 km from the Borj Nord museum.\nThe posh, individually designed suites feature custom-designed furnishings, mosaic floors and/or vaulted ceilings. All offer free Wi-Fi and flat-screen TVs, plus safes and living areas; some have marble bathrooms, terraces, or patios with fountains. Room service is available.\n\nParking is complimentary. Amenities include an upscale restaurant, a terrace and an outdoor pool, plus a spa with a hammam and massage services.\n\nCheck-in time: 15:00\nCheck-out time: 12:00</string>
    <string name="textjnan">In a stylish Berber-inspired building with a tile exterior, this upscale hotel is 2 km from Fes train station, 5 km from the ornate Bab Bou Jeloud city gate and 6 km from the Dar al-Makhzen palace.\nPlush, opulently furnished rooms with balconies feature free Wi-Fi, flat-screen TVs and iPod docks, plus minifridges, tea and coffeemakers, and sofabeds. Suites add separate living/dining areas. Room service is available 24/7.\n\nDining options include an Italian eatery, a cafe, and a polished restaurant that offers regular live music, as well as indoor and poolside bars. There\'s also an outdoor pool, a sauna and a gym.\n\n</string>
    <string name="scroll_view_description2">\@string/scroll_view_description1</string>
    <string name="bojlodText">Bab Boujloud, or the Blue Gate, in Fez holds a special significance that captivates visitors from around the world. Its architectural grandeur is a sight to behold, with intricate tile work and mesmerizing blue and green hues adorning its façade. This historical landmark, dating back to the 12th century, serves as a portal to the ancient city of Fes el-Bali, immersing visitors in a bygone era. Beyond its physical beauty, Bab Boujloud represents a cultural gateway, bridging the gap between tradition and modernity. As one passes through its majestic arches, they are transported into a world where time seems to stand still. The bustling streets of the Medina unfold, revealing a vibrant tapestry of sights, sounds, and scents, evoking the rich heritage and vibrant spirit of Fez. Bab Boujloud, with its architectural splendor and cultural significance, truly epitomizes the essence of this enchanting city.</string>
    <string name="BTHATXT">Dar Batha in Fez, Morocco, is a cultural gem showcasing stunning architecture and a rich collection of Moroccan arts. The 19th-century palace features intricate zellij patterns, carved woodwork, and peaceful courtyards. The museum displays a diverse range of Moroccan craftsmanship, including textiles, carpets, ceramics, metalwork, and woodcarvings. Each artifact reflects the heritage and artistry of Moroccan artisans. Exploring Dar Batha offers a captivating journey into Morocco\'s artistic traditions, making it a must-visit for art and culture enthusiasts.</string>
    <string name="njarinetxt">Njarine Square, located in the heart of the medina in Fez, Morocco, is a vibrant and bustling public square that entices visitors with its lively atmosphere and rich cultural heritage. Surrounded by historic buildings and traditional Moroccan architecture, the square serves as a hub of activity, where locals and tourists gather to socialize, shop, and experience the authentic flavors of Fez. Njarine Square is famous for its stunning centerpiece, the Njarine Fountain, a beautiful example of Moroccan craftsmanship featuring intricate tilework and ornate carvings. The square is also home to the Fondouk Njjarine, a restored caravanserai that now houses the Museum of Wooden Arts and Crafts, showcasing the mastery of local artisans. With its vibrant energy and cultural significance, Njarine Square is a must-visit destination that encapsulates the essence of Fez\'s rich heritage.</string>
    <string name="sbilTxt">Jnan Sbil, also known as Sbil Garden, is a serene oasis nestled in the heart of Fez, Morocco. This historic garden offers a tranquil retreat from the bustling city, providing a peaceful escape for locals and visitors alike. Lush greenery, vibrant flowers, and fragrant orange trees adorn the landscape, creating a picturesque setting for relaxation and contemplation. Jnan Sbil features winding pathways, charming fountains, and shaded benches where one can unwind and enjoy the natural beauty. The garden\'s origins date back to the 18th century, and it continues to be a cherished gathering place for locals, who often come to picnic or engage in leisurely strolls. With its enchanting ambiance and soothing atmosphere, Jnan Sbil is a delightful haven in Fez, inviting visitors to connect with nature and find respite amidst its tranquil surroundings.</string>
    <string name="bouananiaTXT">Bou Inania Madrasa is a remarkable architectural masterpiece located in the heart of the medina of Fez, Morocco. This splendid madrasa, built in the 14th century, stands as a testament to the rich cultural and intellectual heritage of the city. Its intricate geometric patterns, detailed stucco carvings, and vibrant tilework showcase the exquisite craftsmanship of the period. The madrasa served as both a religious school and a place of worship, providing education to scholars from far and wide. Visitors to Bou Inania Madrasa can explore its serene courtyard adorned with a central fountain, marvel at the delicate arabesque designs that adorn the walls, and admire the beautiful prayer hall. The madrasa\'s architectural beauty and historical significance make it a must-visit attraction for those seeking to delve into the captivating history and artistic splendor of Fez.</string>
    <string name="PALAISTXT">The Royal Palace in Fez stands as a regal symbol of Morocco\'s monarchy and architectural grandeur. Located in the heart of the city, this majestic palace showcases traditional Moroccan design elements with its imposing gates, intricate tilework, and ornate facades. While the palace is not open to the public, visitors can admire its exterior beauty, characterized by stunning geometric patterns and vibrant colors. The Royal Palace serves as a reminder of the country\'s rich history and the enduring legacy of its royal heritage. Its presence adds to the allure of Fez, attracting visitors who are captivated by its grandeur and the stories it holds within its walls.</string>
    <string name="KARAWINTXT">Jamae El Karawine, also known as Al-Karaouine Mosque, holds a significant place in the city of Fez, Morocco, as well as in the Islamic world. Established in the 9th century, it is one of the oldest and most revered mosques in the world. Jamae El Karawine not only serves as a place of worship but also as a center of learning. It houses the University of Al Quaraouiyine, recognized as the oldest continuously operating university worldwide. The mosque showcases magnificent Moroccan architecture, with intricate tilework, stunning archways, and a towering minaret. Inside, the prayer hall exudes a sense of tranquility and devotion. Over the centuries, the mosque has attracted scholars, theologians, and students from around the globe, contributing to its rich intellectual and cultural legacy. Jamae El Karawine stands as a testament to the enduring spirit of knowledge and spirituality in the heart of Fez.</string>
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
</resources>