<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/menupicturehome"
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/search"
            android:id="@+id/nav_search"
            android:title="@string/search" />
        <item
            android:icon="@drawable/menupicturemenu"
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories" />

    </group>


        <item android:title="Categories">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:icon="@drawable/categorie_resterant"
                        android:id="@+id/nav_restaurants"
                        android:title="restaurants" />
                    <item
                        android:icon="@drawable/window"
                        android:id="@+id/nav_historiques"
                        android:title="Monuments historiques" />
                    <item
                        android:icon="@drawable/menupicturerestaurant"
                        android:id="@+id/nav_hotel"
                        android:title="Hotel" />

                    <item
                        android:icon="@drawable/menupicturehospital"
                        android:id="@+id/nav_Hospitale"
                        android:title="Hospitale" />
                    <item
                        android:icon="@drawable/menupicturemonument"
                        android:id="@+id/nav_station"
                        android:title="station transport" />
                    <item
                        android:icon="@drawable/menupictureonlineshopping"
                        android:id="@+id/nav_shop"
                        android:title="shop" />



                </group>
            </menu>
        </item>



                <group android:checkableBehavior="none">
                    <item
                        android:icon="@drawable/menupictureshare"
                        android:id="@+id/nav_share"
                        android:title="@string/share" />
                    <item
                        android:icon="@drawable/menupicturestar"
                        android:id="@+id/nav_rate_us"
                        android:title="@string/rate_us" />

                    <item
                    android:icon="@drawable/menupicturelogout"
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
                    <item
                        android:icon="@drawable/menupicturedetail"
                        android:id="@+id/nav_otherapps"
                        android:title="other applicatoin" />
                </group>




</menu>