<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_loading_page"
    android:orientation="vertical"
    tools:context=".user.About_us">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AE121212"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:context=".homeinformation">


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.641"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/carton1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="341dp"
                android:layout_height="250dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/calligraffitti"
                android:text="Let's explore Fes city together"
                android:textColor="#FAF8F8"
                android:textSize="58dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.907"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.8">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/skip_but_styl"
                    app:srcCompat="@drawable/arrow" />
            </androidx.cardview.widget.CardView>

            <TextView

                android:id="@+id/textView3"
                android:layout_width="343dp"
                android:layout_height="74dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="History of Fez"
                android:textColor="#00FFFFFF"
                android:textSize="40sp"
                android:textStyle="normal|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/p_2" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView4"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/adamina"
                android:gravity="center"
                android:text="@string/text1"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="italic"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/p_3" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView5"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/adamina"
                android:gravity="center"
                android:text="@string/text2"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/p_4" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"

                android:fontFamily="@font/adamina"
                android:gravity="center"
                android:text="@string/text3"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/p_5" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"

                android:fontFamily="@font/adamina"
                android:gravity="center"
                android:text="@string/text4"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card4" />

            <Button
                android:id="@+id/button_started_about"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/but_styl"
                android:text="Get started"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView8"
                app:shapeAppearanceOverlay="@drawable/but2_styl" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>